completed evaluation chapter

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -652,6 +652,13 @@
   Year                     = {2011}
 }
 
+@Article{garcia2006cosine,
+  Title                    = {Cosine similarity and term weight tutorial},
+  Author                   = {Garcia, E},
+  Journal                  = {Information retrieval intelligence},
+  Year                     = {2006}
+}
+
 @InProceedings{garcia2006pair,
   Title                    = {Pair-wise entity resolution: overview and challenges},
   Author                   = {Garcia-Molina, Hector},
@@ -1512,6 +1519,18 @@
   Owner                    = {cisstudent},
   Publisher                = {Elsevier},
   Timestamp                = {2015.04.09}
+}
+
+@Article{ruhnau2000eigenvector,
+  Title                    = {Eigenvector-centrality-a node-centrality?},
+  Author                   = {Ruhnau, Britta},
+  Journal                  = {Social networks},
+  Year                     = {2000},
+  Number                   = {4},
+  Pages                    = {357--365},
+  Volume                   = {22},
+
+  Publisher                = {Elsevier}
 }
 
 @Article{sakaki2013tweet,
