completed the EIIM Life Cycle chapter

--- a/main.tex
+++ b/main.tex
@@ -441,7 +441,7 @@ Lastly, I thank University of Arkansas for providing me with the facilities, fun
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\input{Appendices/AppendixA}
+%\input{Appendices/AppendixA}
 %\input{Appendices/AppendixB}
 %\input{Appendices/AppendixC}
 
