--- a/main.tex
+++ b/main.tex
@@ -62,6 +62,7 @@
 
 \pagestyle{fancy} % Finally, use the "fancy" page style to implement the FancyHdr headers
 
+
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % New command to make the lines in the title page
 
 % PDF meta-data
@@ -127,7 +128,7 @@ B.S in Computer Science, Banaras Hindu University, 2008
 \end{titlepage}
 
 \clearpage
-
+\thispagestyle{empty}
 %........................................................................................
 %Copyright Page
 %........................................................................................
@@ -136,6 +137,7 @@ Debanjan Mahata \\
 2015
 \end{center}
 \clearpage
+\thispagestyle{empty}
 
 \normalsize This dissertation, ``A Framework for Collecting, Extracting and Managing Event Identity Information from Textual Content in Social Media", by Debanjan Mahata, is approved by: \\
 
@@ -164,12 +166,12 @@ Program Coordinator: \hspace{0.8cm} \hrulefill  \\
 \hspace*{5.1cm} Ningning Wu \\
 \hspace*{5.1cm} Professor of Information Science \\
 
-Graduate Dean: \hspace{1.9cm} \hrulefill  \\
+Interim Graduate Dean: \hspace{0.5cm} \hrulefill  \\
 \hspace*{5.1cm} Paula J. Casey \\
 \hspace*{5.1cm} Professor of Law \\
 
 \clearpage
-
+\thispagestyle{empty}
 \begin{center}
 \large \textbf{Fair Use}
 \end{center}
@@ -183,7 +185,7 @@ I authorize the Head of Interlibrary Loan or the Head of Archives at the Ottenhe
 Signature: \hspace{1cm} \hrulefill
 
 \clearpage
-
+\thispagestyle{empty}
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
 %----------------------------------------------------------------------------------------
@@ -192,14 +194,19 @@ Signature: \hspace{1cm} \hrulefill
 \doublespacing
 \addtotoc{ABSTRACT} % Add the "Abstract" page entry to the Contents
 
-\abstract{
-%\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+\begin{center} \textbf{ABSTRACT} \end{center}
+
+%\abstract{
+%%\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+\setlength{\parindent}{1cm}
 
 With the popularity of social media platforms such as Facebook, Twitter and Google Plus, there has been voluminous growth in the digital footprints of real-life events on the Internet. The user-generated colloquial and concise textual content related to different types of real-life events, available in these websites, acts as an extremely useful source for researchers and organizations for extracting valuable and insightful information. There has been significant improvement in natural language processing techniques for mining formal and long textual content commonly found in newspapers. It is still a challenging task to mine textual information from the social media channels producing terse, informal and noisy text with an unusual grammatical structure. 
 
-For a real-life event of interest it is necessary to detect and store informative event-specific signals from the noisy social media channels that allows to distinctly identify the event among all others, and characterizes it for extracting actionable insights. These event-specific cues also form its identity in the unstructured domain of social media. This identity information when mined and analyzed in a timely manner has tremendous applications in the areas of real-life event analysis, opinion mining, data journalism, cyber security, event management, among others. Thus, there is a need of a generic framework that can collect the textual content related to a real-life event, extract event-specific information from it and persistently maintain the information for tracking newly produced content as the event evolves, and provide updated event analytics. 
+	For a real-life event of interest it is necessary to detect and store informative event-specific signals from the noisy social media channels that allows to distinctly identify the event among all others, and characterizes it for extracting actionable insights. These event-specific cues also form its identity in the unstructured domain of social media. This identity information when mined and analyzed in a timely manner has tremendous applications in the areas of real-life event analysis, opinion mining, data journalism, cyber security, event management, among others. Thus, there is a need of a generic framework that can collect the textual content related to a real-life event, extract event-specific information from it and persistently maintain the information for tracking newly produced content as the event evolves, and provide updated event analytics. 
 
-The patent-pending work presented in this dissertation establishes the design and implementation of an extendable framework that enables collection, extraction and persistent management of identity information of real-life events from short textual content produced in social media. Towards this objective a pipeline of data processing components going through repeated processing cycles - \textit{Event Identity Information Management Life Cyle} (EIIM) is proposed. A novel persistent graph data structure - \textit{EventIdentityInfoGraph} representing the identity information structure of an event is implemented that forms the critical component of the EIIM life cycle. Mutually reinforcing relationships between event-specific social media posts, hashtags, text units, URLs and users, forming the vertices of the graph and denoting \textit{event identity information units}, are defined and quantified. An iterative and scalable algorithm - \textit{EventIdentityInfoRank} is proposed that processes the vertices of the graph and ranks them in terms of event-specific informativeness by leveraging the mutually reinforcing relationships. The ranked \textit{event identity information units} are further used in tracking new event related content and extracting valuable event-specific information. Different components of the framework are tested and validated. The work is concluded by discussing about its novel contributions, practical applications in various other domains and envisaging future directions.}
+\pagestyle{empty}
+
+	The patent-pending work presented in this dissertation establishes the design and implementation of an extendable framework that enables collection, extraction and persistent management of identity information of real-life events from short textual content produced in social media. Towards this objective a pipeline of data processing components going through repeated processing cycles - \textit{Event Identity Information Management Life Cyle} (EIIM) is proposed. A novel persistent graph data structure - \textit{EventIdentityInfoGraph} representing the identity information structure of an event is implemented that forms the critical component of the EIIM life cycle. Mutually reinforcing relationships between event-specific social media posts, hashtags, text units, URLs and users, forming the vertices of the graph and denoting \textit{event identity information units}, are defined and quantified. An iterative and scalable algorithm - \textit{EventIdentityInfoRank} is proposed that processes the vertices of the graph and ranks them in terms of event-specific informativeness by leveraging the mutually reinforcing relationships. The ranked \textit{event identity information units} are further used in tracking new event related content and extracting valuable event-specific information. Different components of the framework are tested and validated. The work is concluded by discussing about its novel contributions, practical applications in various other domains and envisaging future directions.
 
 
 \clearpage % Start a new page
@@ -237,7 +244,7 @@ The patent-pending work presented in this dissertation establishes the design an
 %----------------------------------------------------------------------------------------
 %	QUOTATION PAGE
 %----------------------------------------------------------------------------------------
-
+\thispagestyle{empty}
 \pagestyle{empty} % No headers or footers for the following pages
 
 \null\vfill % Add some space to move the quote down the page a bit
@@ -252,16 +259,18 @@ Ronald Coase, Economics, Nobel Prize Laureate
 
 \clearpage % Start a new page
 
-
+\thispagestyle{empty}
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
 %----------------------------------------------------------------------------------------
 
 \setstretch{1.3} % Reset the line-spacing to 1.3 for body text (if it has changed)
 
-\acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+%\acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+\begin{center} \textbf{\textit{\LARGE Acknowledgements}} \end{center}
 \doublespacing
 \setlength{\parindent}{1cm}
+
 I would like to express the deepest appreciation to my committee chair Dr. John R. Talburt, who has shown the attitude and the substance of a genius. He continiously and persuasively conveyed a spirit of adventure in regard to research and scholarship, and an excitement in regard to directing innovation towards practical problems. Without his supervision and constant support this dissertation would not have been possible.
 
    I would like to thank my committee members, Dr. Elizabeth Pierce, Dr. Ningning Wu, Dr. Russel Bruhn and Dr. Mathias Brochhausen, whose high quality contributions in the field of Information Science and Information Quality have inspired me to set high standards in my work, and kept me motivated. I would specially thank Dr. Mathias Brochhausen for devoting his valuable time for discussing about possible applications of ontologies in representing real-life events and the related information content in social media. I strongly consider it as one of the future directions of my research.
@@ -273,18 +282,18 @@ I am extremely thankful to Dr. Abhijit Bhattacharyya (Associate Dean, Donaghey C
 Lastly, I thank University of Arkansas for providing me with the facilities, funds and a congenial environment for working towards my goal of PhD. I also acknowledge the Board Of Trustees Of The University Of Arkansas for filing a provisional patent of my work and encouraging me to pursue a path of innovation.
 
 
-}
+%}
 \clearpage % Start a new page
 
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
 %----------------------------------------------------------------------------------------
 
-\pagestyle{fancy} % The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
+\pagestyle{plain} % The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
 
 \lhead{\emph{Contents}} % Set the left side page header to "Contents"
 \tableofcontents % Write out the Table of Contents
-
+\pagestyle{plain}
 \lhead{\emph{List of Figures}} % Set the left side page header to "List of Figures"
 \listoffigures % Write out the List of Figures
 
